@@ -35,7 +35,7 @@ void SelectionItem::setModel(const QRect &bounds, const QImage &mask)
 	setPos(m_bounds.topLeft());
 	if(m_bounds.isEmpty()) {
 		qWarning("Selection mask is empty");
-	} else if(canShowOutline()) {
+	} else {
 		SelectionOutlineGenerator *gen =
 			new SelectionOutlineGenerator(m_executionId, m_mask, false, 0, 0);
 		connect(
@@ -131,7 +131,7 @@ void SelectionItem::paint(
 	Q_UNUSED(opt);
 	Q_UNUSED(widget);
 	if(m_transparentDelay <= 0.0) {
-		if(m_showMask || !canShowOutline()) {
+		if(m_showMask) {
 			painter->setOpacity(0.5);
 			painter->drawImage(QPointF(0.0, 0.0), m_mask);
 		} else {
@@ -161,16 +161,6 @@ void SelectionItem::paint(
 			}
 		}
 	}
-}
-
-bool SelectionItem::canShowOutline() const
-{
-	// Generating outlines uses a lot of memory. Cap it at a bit more than 8K of
-	// size, anything larger than that gets previewed as a mask instead.
-	constexpr long long MAX_AREA = 35000000LL;
-	long long width = m_mask.width();
-	long long height = m_mask.height();
-	return width * height < MAX_AREA;
 }
 
 void SelectionItem::setOutline(
